hphp/hack/test/typecheck/string_expressions4b.php.exp
File "string_expressions4b.php", line 32, characters 12-19:
You cannot use this object as a string (Typing[4067])
File "string_expressions4b.php", line 31, characters 10-38:
This object doesn't implement __toString
